...
    <string name="main_page_header"><u><b><i>Welcome To Blackbox</i></b></u></string>
    <string name="title_activity_instructor_menu">Instructor Menu</string>
    <string name="title_activity_create_problem_set">Problem Set</string>
    <string name="title_activity_editor">Editor</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_email">Email</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"
...
